--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <!-- Bellefair -->
+  <link href="https://fonts.googleapis.com/css2?family=Bellefair&display=swap" rel="stylesheet">
+
+  <!-- Barlow Condensed -->
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet/css" type="" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 
   <title>Frontend Mentor | Space tourism website</title>
 </head>
@@ -23,6 +32,12 @@
   01 Destination
   02 Crew
   03 Technology
+
+  <main>
+    <div class="container">
+      <p class="text-purple">test</p>
+    </div>
+  </main>
 
   So, you want to travel to
   Space
